--- a/力扣刷题.md
+++ b/力扣刷题.md
@@ -1,17 +1,16 @@
-# 一、哈希表
+## 一、二分查找
 
-## LeetCode.1 两数之和
+### 基础方法：
 
-## LeetCode.5 无重复字符的最长字串（哈希表+滑动窗口）
+全闭区间，循环条件为left<=right，最终返回值为left
 
-# 二、链表
+左闭右开区间，循环条件为left<right，最终返回值为left或right
 
-## LeetCode.2 两数相加
+全开区间，循环条件为left<right-1，最终返回值为right
 
-# 三、双指针
+704 ：https://leetcode.cn/problems/binary-search/description/
 
-## LeetCode.4 寻找两个正序数组的中位数
+35：https://leetcode.cn/problems/search-insert-position/
 
-# 四、字符串
+### 进阶题型：
 
-## LeetCode.5 最长回文子串
