--- a/力扣刷题.md
+++ b/力扣刷题.md
@@ -14,3 +14,40 @@
 
 ### 进阶题型：
 
+1.寻找某个数字的起始位置和结束位置（即将等号时的情况归为小于或大于的情况）：https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/
+
+2.注意溢出的情况：https://leetcode.cn/problems/sqrtx/description/
+
+https://leetcode.cn/problems/valid-perfect-square/description/
+
+## 二、双指针
+
+### 同向双指针
+
+快慢指针，解决遍历过程中要处理的对象，避免二次循环，类似于栈的思想
+
+27：https://leetcode.cn/problems/remove-element/solutions/2802809/jian-dan-ti-jian-dan-zuo-pythonjavaccgoj-72bn/
+
+26：https://leetcode.cn/problems/remove-duplicates-from-sorted-array/description/
+
+283：https://leetcode.cn/problems/move-zeroes/description/
+
+#### 进阶题型
+
+对某些对象的特殊处理，如回退，而不再是不做处理
+
+844：https://leetcode.cn/problems/backspace-string-compare/description/
+
+### 相向双指针
+
+977：https://leetcode.cn/problems/squares-of-a-sorted-array/solutions/2806253/xiang-xiang-shuang-zhi-zhen-cong-da-dao-blda6/
+
+## 三、滑动窗口
+
+标准做法是，右边界开始遍历，并不断累积条件，当遍历到满足条件时，开始持续收缩左边界，并计算答案，直到不满足，再开始遍历右边界
+
+https://leetcode.cn/problems/minimum-size-subarray-sum/solutions/1959532/biao-ti-xia-biao-zong-suan-cuo-qing-kan-k81nh/
+
+https://leetcode.cn/problems/fruit-into-baskets/solutions/3042744/hua-dong-chuang-kou-ha-xi-biao-pythonjav-uzmw/
+
+https://leetcode.cn/problems/minimum-window-substring/
