--- a/力扣刷题.md
+++ b/力扣刷题.md
@@ -51,3 +51,13 @@ https://leetcode.cn/problems/minimum-size-subarray-sum/solutions/1959532/biao-ti
 https://leetcode.cn/problems/fruit-into-baskets/solutions/3042744/hua-dong-chuang-kou-ha-xi-biao-pythonjav-uzmw/
 
 https://leetcode.cn/problems/minimum-window-substring/
+
+## 四、螺旋矩阵
+
+第一种做法是 按照 m,n ---> n,m-1 ---->. m-1,n-1这种方式进行遍历获取
+
+第二种做法是开始遍历后，每一步都提前计算出下一步会不会出界
+
+https://leetcode.cn/problems/spiral-matrix-ii/description/
+
+https://leetcode.cn/problems/spiral-matrix/description/
